# Jardincho

./: .project  Cargo.toml
assets/: Bonsai_1.kra  Bonsai_1.kra-autosave.kra  Bonsai_2.png~  Mica.png~
shaders/: FragShader.glsl  VertShader.glsl
shaders/100/: FragShader.glsl  VertShader.glsl
shaders/110/: FragShader.glsl  VertShader.glsl
shaders/140/: FragShader.glsl  VertShader.glsl
shaders/460/: WireVertShader.glsl
shaders/460/2D/: TextureFragShader.glsl  TextureVertShader.glsl
shaders/460/3D/: FillVertShader.glsl  FragShader.glsl
src/: color.rs  main.rs  math.rs  renderer.rs  world.rs
src/platform/: mod.rs  opengl.rs  xcb.rs  xlib.rs
