[package]
name = "jardincho"
version = "0.1.0"
authors = ["Federico Palacios <fpalacios@scanntech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = { version = "0.9", features = ["shape", "xlib_xcb", "dri2"] }
x11 = { version = "2.3", features = ["xlib", "glx", "xrender"] }

glium = "0.30.1"

image = "0.23.14"
nalgebra = "0.29.0"